--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.eremovals6">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Allows the app to access the internet -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Add internet permission if not already present -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +12,10 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.Eremovals6"
         tools:targetApi="31">
 
-        <!-- Main activity of the app; android:exported must be true for activities with intent-filters -->
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -28,25 +25,53 @@
             </intent-filter>
         </activity>
 
-        <!-- Activity for adding prompt codes -->
+        <!-- Add Activities -->
         <activity
             android:name=".AddPromptCodeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Add Promotion Code"
+            android:parentActivityName=".MainActivity" />
 
-        <!-- Activity for adding price items -->
         <activity
             android:name=".AddPriceItemActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Add Price Item"
+            android:parentActivityName=".MainActivity" />
 
-        <!-- Activity for displaying promotion codes -->
+        <!-- Display Activities -->
         <activity
             android:name=".DisplayPromotionCodesActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Promotion Codes"
+            android:parentActivityName=".MainActivity" />
 
-        <!-- Activity for displaying price items categorized by category -->
         <activity
             android:name=".DisplayPriceItemsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Price Items"
+            android:parentActivityName=".MainActivity" />
+
+        <!-- Edit Activities - ADD THESE -->
+        <activity
+            android:name=".EditPromptCodeActivity"
+            android:exported="false"
+            android:label="Edit Promotion Code"
+            android:parentActivityName=".DisplayPromotionCodesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DisplayPromotionCodesActivity" />
+        </activity>
+
+        <activity
+            android:name=".EditPriceItemActivity"
+            android:exported="false"
+            android:label="Edit Price Item"
+            android:parentActivityName=".DisplayPriceItemsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DisplayPriceItemsActivity" />
+        </activity>
 
     </application>
+
 </manifest>
